<?xml version="1.0"?>
<package>
  <name>point_cloud_map_server</name>
  <version>0.0.0</version>
  <description>The point_cloud_map_server package</description>

  <maintainer email="ning@todo.todo">ning</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
